--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World !
+<html>
+	<head>
+		<title>Sarath Nelapati's profile</title>
+	</head>
+	<body>
+		<h1>Hello World</h1>
+	</body>
+</html>
